--- a/10.ansible/aws_test.yml
+++ b/10.ansible/aws_test.yml
@@ -9,3 +9,7 @@
       register: keyout
     - debug:
         var: keyout
+    - name: store login key
+      copy:
+        content: "{{keyout.key.private_key}}"
+        dest: /sample-key.pem
