--- a/10.ansible/vpc-setup.yml
+++ b/10.ansible/vpc-setup.yml
@@ -15,3 +15,18 @@
         tenancy: default
         state: "{{state}}"
       register: vpcout
+
+    - debug:
+        var: vpcout
+
+    - name: Create Public Subnet
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone1}}"
+        state: "{{state}}"
+        cidr: "{{PubSub1Cidr}}"
+        map_public: yes
+        resource_tags:
+          Name: vprofile-pubsub1
+      register: pubsubout1_out
