--- a/10.ansible/vpc-setup.yml
+++ b/10.ansible/vpc-setup.yml
@@ -16,10 +16,10 @@
         state: "{{state}}"
       register: vpcout
 
-    - debug:
-        var: vpcout
+    # - debug:
+    #     var: vpcout
 
-    - name: Create Public Subnet
+    - name: Create Public Subnet 1 zone1
       ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
         region: "{{region}}"
@@ -30,3 +30,63 @@
         resource_tags:
           Name: vprofile-pubsub1
       register: pubsubout1_out
+
+    - name: Create Public Subnet 2 in zone2
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone2}}"
+        state: "{{state}}"
+        cidr: "{{PubSub2Cidr}}"
+        map_public: yes
+        resource_tags:
+          Name: vprofile-pubsub2
+      register: pubsubout2_out
+
+    - name: Create Public Subnet 3 in zone3
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone3}}"
+        state: "{{state}}"
+        cidr: "{{PubSub3Cidr}}"
+        map_public: yes
+        resource_tags:
+          Name: vprofile-pubsub3
+      register: pubsubout3_out
+
+    - name: Create Private Subnet 1 in zone1
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone1}}"
+        state: "{{state}}"
+        cidr: "{{PriSub1Cidr}}"
+        map_public: yes
+        resource_tags:
+          Name: vprofile-prisub1
+      register: pubsubout1_out
+
+    - name: Create Private Subnet 2 in zone1
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone2}}"
+        state: "{{state}}"
+        cidr: "{{PriSub2Cidr}}"
+        map_public: yes
+        resource_tags:
+          Name: vprofile-prisub2
+      register: pubsubout2_out
+
+    - name: Create Private Subnet 3 in zone1
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone3}}"
+        state: "{{state}}"
+        cidr: "{{PriSub3Cidr}}"
+        map_public: yes
+        resource_tags:
+          Name: vprofile-prisub3
+      register: pubsubout3_out
