--- a/10.ansible/vpc-setup.yml
+++ b/10.ansible/vpc-setup.yml
@@ -90,3 +90,12 @@
         resource_tags:
           Name: vprofile-prisub3
       register: pubsubout3_out
+
+    - name: Internet Gateways
+      ec2_vpc_igw:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        state: "{{state}}"
+        resource_tags:
+          Name: vprofile-igw
+        register: igw_out
