--- a/10.ansible/vpc-setup.yml
+++ b/10.ansible/vpc-setup.yml
@@ -123,3 +123,18 @@
         region: "{{region}}"
         if_exist_do_not_create: true
       register: Nat_out
+
+    - name: Set up Private subnet route table
+      ec2_vpc_route_table:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        subnets:
+          - "{{prisubout1_out.subnet.id}}"
+          - "{{prisubout2_out.subnet.id}}"
+          - "{{prisubout3_out.subnet.id}}"
+        routes:
+          - dest: 0.0.0.0/0
+            gateway_id: "{{Nat_out.nat_gateway_id}}"
+        resource_tags:
+          Name: vprofile-public-subnet-route-table
+      register: private_route_table
