--- a/10.ansible/vpc-setup.yml
+++ b/10.ansible/vpc-setup.yml
@@ -115,14 +115,14 @@
           Name: vprofile-public-subnet-route-table
       register: pubroutetable1
 
-    - name: Create new nat gateway and allocate new EIP if nat does not
-      ec2_vpc_nat_gateway:
-        state: "{{state}}"
-        subnet_id: "{{pubsubout1_out.subnet.id}}"
-        wait: yes
-        region: "{{region}}"
-        if_exist_do_not_create: true
-      register: Nat_out
+    # - name: Create new nat gateway and allocate new EIP if nat does not
+    #   ec2_vpc_nat_gateway:
+    #     state: "{{state}}"
+    #     subnet_id: "{{pubsubout1_out.subnet.id}}"
+    #     wait: yes
+    #     region: "{{region}}"
+    #     if_exist_do_not_create: true
+    #   register: Nat_out
 
     - name: Set up Private subnet route table
       ec2_vpc_route_table:
@@ -138,3 +138,37 @@
         resource_tags:
           Name: vprofile-public-subnet-route-table
       register: private_route_table
+
+    - debug:
+        var: "{{item}}"
+      loop:
+        - vpcout.vpc.id
+        - pubsub1_out.subnet.id
+        - pubsub2_out.subnet.id
+        - pubsub3_out.subnet.id
+        - privsub1_out.subnet.id
+        - privsub2_out.subnet.id
+        - privsub3_out.subnet.id
+        - igw_out.gateway_id
+        - pubRT_out.route_table.id
+        - NATGW_out.nat_gateway_id
+        - privRT_out.route_table.id
+
+    - set_fact:
+        vpcid: "{{vpcout.vpc.id}}"
+        pubsub1id: "{{ pubsub1_out.subnet.id }}"
+        pubsub2id: "{{ pubsub2_out.subnet.id }}"
+        pubsub3id: "{{ pubsub3_out.subnet.id }}"
+        privsub1id: "{{ privsub1_out.subnet.id }}"
+        privsub2id: "{{ privsub2_out.subnet.id }}"
+        privsub3id: "{{ privsub3_out.subnet.id }}"
+        igwid: "{{ igw_out.gateway_id }}"
+        pubRTid: "{{ pubRT_out.route_table.id }}"
+        NATGWid: "{{ NATGW_out.nat_gateway_id }}"
+        privRTid: "{{ privRT_out.route_table.id }}"
+        cacheable: yes
+
+    - name: Create variables file for vpc output
+      copy:
+        content: "vpcid: {{ vpcout.vpc.id }}\npubsub1id: {{ pubsub1_out.subnet.id }}\npubsub2id: {{ pubsub2_out.subnet.id }}\npubsub3id: {{ pubsub3_out.subnet.id }}\nprivsub1id: {{ privsub1_out.subnet.id }}\nprivsub2id: {{ privsub2_out.subnet.id }}\nprivsub3id: {{ privsub3_out.subnet.id }}\nigwid: {{ igw_out.gateway_id }}\npubRTid: {{ pubRT_out.route_table.id }}\nNATGWid: {{ NATGW_out.nat_gateway_id }}\nprivRTid: {{ privRT_out.route_table.id }}\n"
+        dest: vars/output_vars
